tests/ui/rfcs/rfc-1445-restrict-constants-in-patterns/match-requires-both-partialeq-and-eq.stderr
error: constant of non-structural type `Foo` in a pattern
  --> $DIR/match-requires-both-partialeq-and-eq.rs:19:9
   |
LL | struct Foo {
   | ---------- `Foo` must be annotated with `#[derive(PartialEq)]` to be usable in patterns
...
LL | const FOO: Foo = Foo { x: 0 };
   | -------------- constant defined here
...
LL |         FOO => { }
   |         ^^^ constant of non-structural type
   |
note: the `PartialEq` trait must be derived, manual `impl`s are not sufficient; see https://doc.rust-lang.org/stable/std/marker/trait.StructuralPartialEq.html for details
  --> $DIR/match-requires-both-partialeq-and-eq.rs:8:1
   |
LL | impl PartialEq for Foo {
   | ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

